@@ -125,7 +125,7 @@ SET(WTF_USE_HARFBUZZ_NG 1)
 ADD_DEFINITIONS(-DWTF_USE_FREETYPE=1)
 ADD_DEFINITIONS(-DWTF_USE_HARFBUZZ_NG=1)
 
-IF (ENABLE_WEBKIT2)
+IF (ENABLE_WEBKIT2 AND ENABLE_NETSCAPE_PLUGIN_API)
     SET(ENABLE_PLUGIN_PROCESS 1)
 ENDIF ()
 
