@@ -1,3 +1,14 @@
+2012-10-18  Laszlo Gombos  <l.gombos@samsung.com>
+
+        [EFL] Buildfix if Netscape plugin support is disabled
+        https://bugs.webkit.org/show_bug.cgi?id=99757
+
+        Reviewed by Gyuyoung Kim.
+
+        Set ENABLE_PLUGIN_PROCESS only if ENABLE_NETSCAPE_PLUGIN_API is set.
+
+        * Source/cmake/OptionsEfl.cmake:
+
 2012-10-18  Pablo Flouret  <pablof@motorola.com>
 
         Implement css3-conditional's @supports rule
